<resources>
    <string name="app_name">Kasir Pintar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verification">Anda akan mendapatkan email verifikasi. Pastikan anda memasukan email dengan benar.</string>
    <string name="show_password">Show Password</string>
    <string name="title_activity_success_dialog">SuccessDialog</string>
    <string name="check_email">Silakan cek email Anda untuk melakukan verifikasi.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="double_back">Tekan kembali lagi untuk keluar</string>
    <string name="login">Login</string>
    <string name="name">Nama Lengkap</string>
    <string name="retry_email">Kirim ulang email ke \n%1$s</string>
    <string name="pin">Pin</string>
</resources>